# gridstats

./: schema.sql
.github/workflows/: fetcher.yml  main.yml
bmrs/samples/: B0610.xml  B0620.xml  B1430.xml  B1440.xml  B1510.xml  B1520.xml  B1540.xml  B1620.xml  B1630.xml  B1740.xml  B1750.xml  B1760.xml  B1770.xml  B1780.xml  B1810.xml  B1820.xml  B1830.xml  B2010.xml  BOALF.xml  BOAV.xml  DISBSAD.xml  DISEBSP.xml  DISPTAV.xml  EBOCF.xml  FREQ.xml  FUELHH.xml  FUELINST.xml  IMBALNGC.xml  INDDEM.xml  INDGEN.xml  INDO.xml  ISPSTACK.xml  ITSDO.xml  LOLPDM.xml  MELNGC.xml  MELS.xml  MID.xml  MILS.xml  MNZT.xml  MZT.xml  (+17 more)
fetcher/: Dockerfile  bmrs_client.py  carbonintensity.py  config.py  database.py  elexon_fetcher.py  push_listener.py  pyproject.toml  settlement_periods.py  sources.py  test_push_listener.py  test_settlement_periods.py  wikidata.py
